GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Code__c</fullName>
    <label>Account Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>