GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Account_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Account_Identifier__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Acts as an external ID</inlineHelpText>
    <label>Account Identifier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>