GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/AM_Email__c.field-meta.xml
<CustomField>
    <fullName>AM_Email__c</fullName>
    <description>Email address of Carrier&apos;s Account Manager</description>
    <!--<formula>AM_Name__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Email address for Carrier&apos;s Account Manager</inlineHelpText>-->
    <label>AM Email</label>
    <type>Text</type>
    <length>20</length>
</CustomField>