GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/AM_Name__c.field-meta.xml
<CustomField>
    <fullName>AM_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Manager for the Carrier</description>
    <inlineHelpText>Account Manager for the Carrier</inlineHelpText>
    <label>AM Name</label>
    <!--<lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>LTCG Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>-->
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>