GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/AM_Phone__c.field-meta.xml
<CustomField>
    <fullName>AM_Phone__c</fullName>
    <description>Phone number of Carrier&apos;s Account Manager</description>
    <!--<formula>AM_Name__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Phone number for Carrier&apos;s Account Manager</inlineHelpText>-->
    <label>AM Phone</label>
    <type>Text</type>
    <length>255</length>
</CustomField>