GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/BillingFrequency__c.field-meta.xml
<CustomField>
    <fullName>BillingFrequency__c</fullName>
    <label>Billing FREQ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bi-weekly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-Monthly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>