GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/BillingNumber__c.field-meta.xml
<CustomField>
    <fullName>BillingNumber__c</fullName>
    <label>Billing #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>