GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/CACICReq__c.field-meta.xml
<CustomField>
    <fullName>CACICReq__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CA CIC Req</label>
    <type>Checkbox</type>
</CustomField>