GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>