GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/CompanyAndGroupName__c.field-meta.xml
<CustomField>
    <fullName>CompanyAndGroupName__c</fullName>
    <formula>Name &amp;&apos; &apos;&amp;     Parent.Name</formula>
    <label>CompanyAndGroupName</label>
    <type>Text</type>
</CustomField>