GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmation</label>
    <type>Checkbox</type>
</CustomField>