GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Confirmation_Email__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmation Email</label>
    <type>Checkbox</type>
</CustomField>