GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Confirmation_Text__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Text__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmation Text</label>
    <type>Checkbox</type>
</CustomField>