GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/CustServiceNumber__c.field-meta.xml
<CustomField>
    <fullName>CustServiceNumber__c</fullName>
    <inlineHelpText>Customer Service Phone Number</inlineHelpText>
    <label>Cust Service #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>