GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Datechanged__c.field-meta.xml
<CustomField>
    <fullName>Datechanged__c</fullName>
    <description>Last modified time</description>
    <label>Datechanged</label>
    <type>DateTime</type>
</CustomField>