GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Delay_Hours__c.field-meta.xml
<CustomField>
    <fullName>Delay_Hours__c</fullName>
    <label>Delay Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>