GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Divison__c.field-meta.xml
<CustomField>
    <fullName>Divison__c</fullName>
    <label>Divison</label>
    <length>50</length>
    <type>Text</type>
</CustomField>