GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Emails__c.field-meta.xml
<CustomField>
    <fullName>Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emails</label>
    <type>Checkbox</type>
</CustomField>