GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/F2F_Level_2__c.field-meta.xml
<CustomField>
    <fullName>F2F_Level_2__c</fullName>
    <label>F2F Level 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>