GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/FinanceCustID__c.field-meta.xml
<CustomField>
    <fullName>FinanceCustID__c</fullName>
    <label>Finance CUST ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>