GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Firm_Mkt_Org__c.field-meta.xml
<CustomField>
    <fullName>Firm_Mkt_Org__c</fullName>
    <label>Firm/Mkt Org</label>
    <length>50</length>
    <type>Text</type>
</CustomField>