GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Group_Dup_Check__c.field-meta.xml
<CustomField>
    <fullName>Group_Dup_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the duplicated check done for the entire group?</inlineHelpText>
    <label>Group Dup Check</label>
    <type>Checkbox</type>
</CustomField>