GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <formula>Parent.Name</formula>
    <label>Group Name</label>
    <type>Text</type>
</CustomField>