GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/ImageMailMergeItem__c.field-meta.xml
<CustomField>
    <fullName>ImageMailMergeItem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Image Mail Merge Item</label>
    <type>Checkbox</type>
</CustomField>