GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/ImageMailMergePrefixText__c.field-meta.xml
<CustomField>
    <fullName>ImageMailMergePrefixText__c</fullName>
    <label>Image Mail Merge Prefix Text</label>
    <length>2</length>
    <type>Text</type>
</CustomField>