GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intake</label>
    <type>Checkbox</type>
</CustomField>