GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Intake_Email__c.field-meta.xml
<CustomField>
    <fullName>Intake_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intake Email</label>
    <type>Checkbox</type>
</CustomField>