GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Intake_Text__c.field-meta.xml
<CustomField>
    <fullName>Intake_Text__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intake Text</label>
    <type>Checkbox</type>
</CustomField>