GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Interpreted_Languages__c.field-meta.xml
<CustomField>
    <fullName>Interpreted_Languages__c</fullName>
    <label>Interpreted Languages</label>
    <type>TextArea</type>
</CustomField>