GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Interpreter_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interpreter_Rate__c</fullName>
    <label>Interpreter Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>