GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Interpreter_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Interpreter_Rate_Type__c</fullName>
    <label>Interpreter Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Per Min</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>