GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Leave_Message_Options__c.field-meta.xml
<CustomField>
    <fullName>Leave_Message_Options__c</fullName>
    <label>Leave Message Options</label>
    <type>TextArea</type>
</CustomField>