GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/MCAS_Composite_Threshold__c.field-meta.xml
<CustomField>
    <fullName>MCAS_Composite_Threshold__c</fullName>
    <label>MCAS Composite Threshold</label>
    <length>20</length>
    <type>Text</type>
</CustomField>