GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Memo</label>
    <type>Checkbox</type>
</CustomField>