GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/MinRate__c.field-meta.xml
<CustomField>
    <fullName>MinRate__c</fullName>
    <label>Custom Rate (per min)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>