GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Nurse_Auto_Offer__c.field-meta.xml
<CustomField>
    <fullName>Nurse_Auto_Offer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nurse Auto Offer</label>
    <type>Checkbox</type>
</CustomField>