GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Of_Calls__c.field-meta.xml
<CustomField>
    <fullName>Of_Calls__c</fullName>
    <label># Of Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>