GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/On_Hold_Email__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Hold Email</label>
    <type>Checkbox</type>
</CustomField>