GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Phone_Code__c.field-meta.xml
<CustomField>
    <fullName>Phone_Code__c</fullName>
    <label>Phone Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>