GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/PolicyType__c.field-meta.xml
<CustomField>
    <fullName>PolicyType__c</fullName>
    <label>Policy Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>