GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Products</label>
    <length>50</length>
    <type>Text</type>
</CustomField>