GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Reminder_Email__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reminder Email</label>
    <type>Checkbox</type>
</CustomField>