GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Reminder_Text__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Text__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reminder Text</label>
    <type>Checkbox</type>
</CustomField>