GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Remove_From_Auto_Dialer__c.field-meta.xml
<CustomField>
    <fullName>Remove_From_Auto_Dialer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove From Auto Dialer</label>
    <type>Checkbox</type>
</CustomField>