GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Saturday__c.field-meta.xml
<CustomField>
    <fullName>Saturday__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Can calls be scheduled on Saturday?</inlineHelpText>
    <label>Saturday</label>
    <type>Checkbox</type>
</CustomField>