GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/ScriptAcctName__c.field-meta.xml
<CustomField>
    <fullName>ScriptAcctName__c</fullName>
    <label>Script ACCT Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>