GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Specify__c.field-meta.xml
<CustomField>
    <fullName>Specify__c</fullName>
    <description>Transportation method specify</description>
    <label>Specify</label>
    <length>50</length>
    <type>Text</type>
</CustomField>