GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/StandardPerMin__c.field-meta.xml
<CustomField>
    <fullName>StandardPerMin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Standard Rate</label>
    <type>Checkbox</type>
</CustomField>