GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Sunday__c.field-meta.xml
<CustomField>
    <fullName>Sunday__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Can calls be scheduled on Sunday?</inlineHelpText>
    <label>Sunday</label>
    <type>Checkbox</type>
</CustomField>