GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Tele_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Tele_Level_3__c</fullName>
    <label>Tele Level 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>