GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Texts__c.field-meta.xml
<CustomField>
    <fullName>Texts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Texts</label>
    <type>Checkbox</type>
</CustomField>