GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Thursday_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Thursday_End_Time__c</fullName>
    <label>Thursday End Time</label>
    <type>Time</type>
</CustomField>