GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Toll_Free__c.field-meta.xml
<CustomField>
    <fullName>Toll_Free__c</fullName>
    <label>Toll Free #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>