GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Transmission_Summary__c.field-meta.xml
<CustomField>
    <fullName>Transmission_Summary__c</fullName>
    <label>Transmission Summary</label>
    <type>TextArea</type>
</CustomField>