GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Transportation__c.field-meta.xml
<CustomField>
    <fullName>Transportation__c</fullName>
    <description>Memo transportation method</description>
    <label>Transportation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Memo__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASMT</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Feed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>