GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/UsePER_MIN__c.field-meta.xml
<CustomField>
    <fullName>UsePER_MIN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Per Min</label>
    <type>Checkbox</type>
</CustomField>