GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Valid_Call_Options__c.field-meta.xml
<CustomField>
    <fullName>Valid_Call_Options__c</fullName>
    <label>Valid Call Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>