GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Vid_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Vid_Level_1__c</fullName>
    <label>Vid Level 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>