GloablServices/keshavglobal/force-app/main/default/objects/Account/fields/Vid_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Vid_Level_2__c</fullName>
    <label>Vid Level 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>