GloablServices/keshavglobal/force-app/main/default/objects/Account/recordTypes/Claims.recordType-meta.xml
<RecordType>
    <fullName>Claims</fullName>
    <active>true</active>
    <description>Recordtype for Claims Accounts</description>
    <label>Claims</label>
    
</RecordType>