GloablServices/keshavglobal/force-app/main/default/objects/Account/recordTypes/Underwriting.recordType-meta.xml
<RecordType>
    <fullName>Underwriting</fullName>
    <active>true</active>
    <description>Recordtype for Underwriting Accounts</description>
    <label>Underwriting</label>
</RecordType>