GloablServices/keshavglobal/force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>Insurance_Type__c</columns>
    <columns>Account_Code__c</columns>
    <columns>BillingFrequency__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>